--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:lint": "eslint --fix .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "predeploy": "cd example && yarn install && yarn run build",
+    "pre-deploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
   "pre-commit": [
