--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
     "prettier/standard",
     "prettier/react"
   ],
+  "plugins": [
+    "react-hooks"
+  ],
   "env": {
     "node": true
   },
@@ -28,6 +31,8 @@
     "react/jsx-handler-names": 0,
     "react/jsx-fragments": 0,
     "react/no-unused-prop-types": 2,
-    "import/export": 0
+    "import/export": 0,
+    "react-hooks/rules-of-hooks": "error", // 檢查 Hook 的規則
+    "react-hooks/exhaustive-deps": "warn" // 檢查 effect 的相依性
   }
 }
