test:unit-coverage

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:build": "run-s build",
     "test:lint": "eslint --fix .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:unit-coverage": "cross-env CI=1 react-scripts test --env=jsdom --coverage",
     "test:watch": "react-scripts test --env=jsdom",
     "pre-deploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
