--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "commons-ui",
+  "name": "sy-commons-ui",
   "version": "1.0.0",
-  "description": "Made with create-react-library",
-  "author": "",
+  "description": "sy-commons-ui",
+  "author": "sy team",
   "license": "MIT",
-  "repository": "/commons-ui",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yanshibainu/commons-ui"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
