--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
     "dist"
   ],
   "dependencies": {
+    "add": "^2.0.6",
     "react-perfect-scrollbar": "^1.5.8",
-    "rsuite": "^4.7.2"
+    "react-split-pane": "^2.0.3",
+    "rsuite": "^4.7.2",
+    "yarn": "^1.22.10"
   }
 }
