--- a/example/package.json
+++ b/example/package.json
@@ -1,16 +1,14 @@
 {
   "name": "commons-ui-example",
-  "homepage": ".",
+  "homepage": "yanshibainu/od-editor-ui/example/commons-ui-example",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "SET PORT=3002 && react-app-rewired start",
+    "start": "cross-env port=3002 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
-
-  
   "dependencies": {
     "commons-ui": "link:..",
     "customize-cra": "^1.0.0-alpha.0",
@@ -22,6 +20,7 @@
     "react-scripts": "link:../node_modules/react-scripts"
   },
   "devDependencies": {
+    "cross-env": "^5.1.4",
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
   },
   "eslintConfig": {
