--- a/package.json
+++ b/package.json
@@ -56,8 +56,6 @@
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
     "prettier": "^2.0.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "files": [
@@ -65,9 +63,10 @@
   ],
   "dependencies": {
     "add": "^2.0.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-split-pane": "^2.0.3",
-    "rsuite": "^4.7.2",
-    "yarn": "^1.22.10"
+    "rsuite": "^4.7.2"
   }
 }
