--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-dom": "^16.13.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-split-pane": "^2.0.3",
-    "rsuite": "^4.7.2",
+    "rsuite": "4.8.6",
     "js-cookie": "^2.2.1",
     "moment": "^2.27.0"
   }
