--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,7 @@
     "react": "link:../node_modules/react",
     "react-app-rewired": "^2.1.6",
     "react-dom": "link:../node_modules/react-dom",
-    "react-scripts": "link:../node_modules/react-scripts"
+    "react-scripts": "3.4.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
